--- a/server/config.json
+++ b/server/config.json
@@ -1,4 +1,9 @@
 {
-    "stream_files": ["/home/podonok/diplom/marking/assets/videos/1.mp4", "/home/podonok/diplom/marking/assets/videos/2.mp4"],
-    "IP": "192.168.0.101"
+    "stream_files": [
+        "/home/podonok/diplom/marking/assets/videos/1.mp4",
+        "/home/podonok/diplom/marking/assets/videos/2.mp4"
+    ],
+    "IP": "192.168.0.101",
+    "conf": 0.5,
+    "tracking_mode": true
 }
