feat(main): Добавить новые параметры в config

--- a/server/config.json
+++ b/server/config.json
@@ -1,9 +1,11 @@
 {
     "stream_files": [
         "/home/podonok/diplom/marking/assets/videos/1.mp4",
-        "/home/podonok/diplom/marking/assets/videos/2.mp4"
+        "/home/podonok/diplom/marking/assets/videos/4.mp4"
     ],
     "IP": "192.168.0.101",
     "conf": 0.5,
-    "tracking_mode": true
+    "tracking_mode": true,
+    "clahe": 0,
+    "model": "detect"
 }
